cam: Fix sub-menu z-index

--- a/src/css/cam/_header.scss
+++ b/src/css/cam/_header.scss
@@ -284,6 +284,7 @@
     text-align: left;
     @include breakpoint($break-desktop) {
       position: absolute;
+      z-index: 1;
       & > li {
         display: block;
         padding: 0;
